FIX - Banner break showing white space between tablet and mobile

--- a/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
+++ b/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
@@ -99,6 +99,11 @@
 				} 
 			}
 		}
+		@include media( $tablet ) {
+			img {
+				height: 100%;
+			}
+		}
 
 	}
 }
